MVC with structured concurrency